# box-sorter

./: .gitignore  README.md
docs/: RUN.md  architecture.excalidraw  gen_thumbnail.py
example_code/: 00_robot_connect.ipynb
scripts/: gripper.sh  robot_down.sh  robot_up.sh
src/: doosan_example.ipynb  pick_and_place_hard_coding.ipynb
src/doosan-robot2/: .gitattributes  LICENSE  README.md
src/doosan-robot2/.devcontainer/: Dockerfile  devcontainer.json  post-command.sh
src/doosan-robot2/dsr_bringup2/: CHANGELOG.rst  package.xml  setup.py
src/doosan-robot2/dsr_bringup2/config/: nav2_params_no_map.yaml
src/doosan-robot2/dsr_bringup2/dsr_bringup2/: controller_config.py  gazebo_connection.py  gazebo_connection_pos.py  moveit_connection.py  run_emulator.py  set_config.py
src/doosan-robot2/dsr_bringup2/launch/: dsr_bringup2_gazebo.launch.py  dsr_bringup2_moveit.launch.py  dsr_bringup2_rviz.launch.py  dsr_bringup2_spawn_on_gazebo.launch.py  dsr_dual_arm_rviz.launch.py  dsr_dual_mobile_manipulator_rviz.launch.py  dsr_mobile_manipulator_dual_moveit.launch.py  dsr_mobile_manipulator_dual_rviz.launch.py  dsr_mobile_manipulator_moveit.launch.py  dsr_mobile_manipulator_rviz.launch.py
src/doosan-robot2/dsr_common2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_common2/imp/: DRFC.py  DR_common2.py  DR_error2.py  DR_init.py  DR_tcp_client2.py  DR_tcp_server2.py  DSR_util2.py
src/doosan-robot2/dsr_common2/include/: dsr_robot.h  dsr_serial.h  dsr_util.h
src/doosan-robot2/dsr_common2/resource/: fake_joint_driver_node.cpp
src/doosan-robot2/dsr_common2/servicepack/: auto_setup
src/doosan-robot2/dsr_common2/src/: dsr_robot.cpp  dsr_serial.cpp
src/doosan-robot2/dsr_controller2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_controller2/config/: console.conf  default.yaml  dsr_controller2.yaml  dsr_controller2_ex.yaml  dsr_controller2_gz.yaml  dsr_controller2_gz_p3020.yaml  dsr_controller2_p3020.yaml  gripper_controller.yaml  mobile_base_controller.yaml
src/doosan-robot2/dsr_controller2/launch/: dsr_control2.launch.py  dsr_controller2.launch.py  dsr_moveit2.launch.py
src/doosan-robot2/dsr_controller2/src/: dsr_control_node2.cpp  dsr_controller2.cpp  dsr_joint_trajectory.cpp
src/doosan-robot2/dsr_description2/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_description2/config/: macro.boxer_mobile.xacro  macro.gazebo.p3020.xacro
src/doosan-robot2/dsr_description2/gripper/: NOTICE  robotiq.ros2_control.xacro  robotiq.xacro
src/doosan-robot2/dsr_description2/launch/: dsr_description.launch.py
src/doosan-robot2/dsr_description2/ros2_control/: a0509.gz_ros2_control.xacro  a0509.prefixed.ros2_control.xacro  a0509.ros2_control.xacro  a0912.gz_ros2_control.xacro  a0912.ros2_control.xacro  e0509.ros2_control.xacro  h2017.gz_ros2_control.xacro  h2017.ros2_control.xacro  h2515.gz_ros2_control.xacro  h2515.ros2_control.xacro  m0609.gz_ros2_control.xacro  m0609.ros2_control.xacro  m0617.gz_ros2_control.xacro  m0617.ros2_control.xacro  m1013.gz_ros2_control.xacro  m1013.prefixed.gz_ros2_control.xacro  m1013.prefixed.ros2_control.xacro  (+6 more)
src/doosan-robot2/dsr_gazebo2/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_hardware2/: package.xml
src/doosan-robot2/dsr_mobile_wbc2/: CMakeLists.txt  dsr_mobile_wbc2_plugins.xml  package.xml
src/doosan-robot2/dsr_mobile_wbc2/config/: whole_body_controller.yaml
src/doosan-robot2/dsr_mobile_wbc2/include/dsr_mobile_wbc2/: whole_body_controller.hpp
src/doosan-robot2/dsr_mobile_wbc2/src/: whole_body_controller.cpp
src/doosan-robot2/dsr_moveit2/dsr_moveit_config_m1013/: CMakeLists.txt  package.xml
src/doosan-robot2/dsr_moveit2/dsr_moveit_config_m1013/config/: dsr.srdf.xacro  m1013.ros2_control.xacro  m1013.urdf.xacro  ompl_planning.yaml  ros2_controllers.yaml
src/doosan-robot2/dsr_moveit2/dsr_moveit_config_m1013/launch/: demo.launch.py  start.launch.py
src/doosan-robot2/dsr_moveit2/dsr_moveit_config_m1013/src/: dsr_gripper_button_rviz2.cpp
src/doosan-robot2/dsr_msgs2/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/doosan-robot2/dsr_msgs2/msg/: RobotError.msg  RobotState.msg
src/doosan-robot2/dsr_msgs2/srv/: AlignAxis1.srv  AlignAxis2.srv  ChangeCollisionSensitivity.srv  DrlStart.srv  EnableAlterMotion.srv  GetToolForce.srv  MoveBlending.srv  MoveCircle.srv  MoveJoint.srv  MoveJointx.srv  MoveLine.srv  MovePeriodic.srv  MoveSpiral.srv  MoveSplineJoint.srv  MoveSplineTask.srv  ReadDataRt.srv  ServoOff.srv  SetRobotControl.srv  SetSafetyMode.srv
src/doosan-robot2/dsr_tests/: package.xml  setup.py
src/dsr_study/: .gitignore  DSR_ROBOT2.py  README.md
src/dsr_study/dsr_gripper/: package.xml  setup.cfg  setup.py
src/dsr_study/dsr_gripper/dsr_gripper/: __init__.py  gripper_api.py  gripper_service.py  gripper_service_a.py
src/dsr_study/dsr_gripper_interfaces/: CMakeLists.txt  package.xml
src/dsr_study/dsr_gripper_interfaces/srv/: GripperCmd.srv
src/dynamic_grasp_force/: grasp.ipynb  grasp.md
src/dynamic_grasp_force_with_width/: FINDINGS_85mm.md  REVIEW.md  REVIEW_VER2.md  grasp.ipynb  grasp.md  grasp_v2.ipynb  grasp_v2_문의점.txt  grasp_v3.ipynb
src/dynamic_grasp_force_with_width/data/: weight_calib_bottle.json  weight_calib_box.json  weight_calib_box85.json  weight_calib_points.json  width_dependence.json
src/dynamic_grasp_force_with_width/scripts/: README.md  fit.py  goto_pick.py  grip.py  hold_test.py  measure_point.py  read_tau.py  release.py  setup_tool.py
src/yh/: click_and_move.py  doosan_client.py  easyocr_contour.py  ocr_click_and_move.py  opencv_large_regions.py
src/yh/hand_eye_data/: cam2base.npz  gripper_settings.json
yh/: click_and_move.py  doosan_client.py  easyocr_contour.py  hand_eye_calib.py  ocr_click_and_move.py
yh/hand_eye_data/: cam2base.json  cam2base.npz  gripper_settings.json
yh/hand_eye_data/samples/: sample_000.json  sample_001.json  sample_002.json  sample_003.json  sample_004.json  sample_005.json  sample_006.json  sample_007.json  sample_008.json  sample_009.json  sample_010.json  sample_011.json  sample_012.json  sample_013.json  sample_019.json
(+270 files in other folders)
