<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_bringup2</name>
  <version>1.1.0</version>
  <description>dsr_bringup2 package</description>

  <author email="minsoo.song@doosan.com">Minsoo Song</author>

  <maintainer email="minsoo.song@doosan.com">Minsoo Song</maintainer>
  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>

  <license>Apache License 2.0</license>
  
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <build_depend>ros_gz</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>dsr_msgs2</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
