<?xml version="1.0"?>
<package format="3">
  <name>dsr_mobile_wbc2</name>
  <version>0.1.0</version>
  <description>Whole-body controller skeleton for dual-arm mobile manipulator.</description>

  <maintainer email="ros.robotics@doosan.com">Doosan Robotics</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
