<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsr_gripper</name>
  <version>0.0.1</version>
  <description>RH-P12-RN(A) 그리퍼 서비스 노드 (방식 A: DrlStart 매 호출)</description>
  <maintainer email="kyung133851@pinklab.art">pl3</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>dsr_msgs2</exec_depend>
  <exec_depend>dsr_gripper_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
